# evalo

./: CMakeLists.txt  README.md  main.c  parse.c  parse.h  parser.c  parser.h  token.c  token.h
.cache/clangd/index/: main.c.3BBE07E7E03C199B.idx  parse.c.32A8FB8CD2D34F9F.idx  parse.h.2C7CEFB77A0B6203.idx  token.c.47FBB912F1C43C3E.idx  token.h.0D2CEC9A51AD12D9.idx
include/: arg.h  error.h  format.h  parse.h  token.h
src/: arg.c  format.c  main.c  parse.c  token.c
test/: test_arg.c  test_eval.c  test_format.c
